--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  min-height: 100vh;
+  /* background-color: blue; */
+  /* color: #eee; */
 }
-
-.App-link {
-  color: #61dafb;
+.container{
+  min-height: 60vh;
+  min-width: 60vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #00008B;
+  color: #eee;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
+.Tabs{
+  display: flex;
+  padding: 20px 10px;
+  background-color: blue;
+  width: 100%;
+  margin-top: -289px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.Tab{
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.Tab a{
+  text-decoration: none;
+  color: #eee;
+  padding: 10px 29px;
+  background-color: yellowgreen;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.viewport{
+  display: flex;
+  position:absolute;
+
 }
